# backend/internal/httpapi/users/routes.go
@@ -9,8 +9,8 @@ func (h *Handler) Routes() chi.Router {
 	r.Get("/lookup", h.GetUserByEmail)
 	r.Get("/me", h.GetUserInfo)
 	r.Patch("/me/display-name", h.UpdateDisplayName)
-	r.Patch("/me/role", h.UpdateRole)
 	r.Patch("/me/preferences", h.UpdatePreferences)
+	r.Patch("/{userId}/role", h.UpdateRole)
 	r.Delete("/me", h.DeleteUser)
 	r.Get("/me/open-sessions", h.GetOpenSessions)
 	r.Get("/me/submissions", h.GetSubmissions)
